--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
+@font-face {
+  font-family: heebo;
+  src: url('./assets/fonts/heebo/Heebo-Regular.ttf');
+}
+
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: heebo, 'sans-serif';
+  /* 62.5% = 10px = 1rem */
+  font-size: 62.5%; 
+  box-sizing: border-box;
 }
