Início carrinho de compras

--- a/angular/trabalho-ecommerce/src/app/components/topbar/topbar.component.html
+++ b/angular/trabalho-ecommerce/src/app/components/topbar/topbar.component.html
@@ -14,7 +14,7 @@
       </li>
     </ul>
     <div>
-      <i class="fas fa-shopping-cart"></i>
+      <i class="fas fa-shopping-cart" [routerLink]="['shopping-cart']"></i>
       <i class="fas fa-user"></i>
     </div>
   </div>
