--- a/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,34 @@
-<p>
-  shopping-cart works!
-</p>
+<h1>
+  Meu Carrinho!
+</h1>
+
+<div class="d-flex">
+  <table class="table table-bordered" style="margin:100px">
+      <thead>
+        <tr>
+          <th scope="col">Produto</th>
+          <th scope="col">Quantidade</th>
+          <th scope="col">Preço</th>
+          <th scope="col">Total</th>
+        </tr>
+      </thead>
+      <tbody >
+          <tr *ngFor="let shopp of listShoppingCarts">
+            <td>{{shopp.product.name}}</td>
+            <td>{{shopp.amount}}</td>
+            <td>{{shopp.product.price}}</td>
+            <td>{{(shopp.product.price*shopp.amount)}}</td>
+          </tr>
+      </tbody>
+  </table>
+
+  <div class="card" style="width: 30rem;">
+    <div class="card-body">
+      <h5 class="card-header">Resumo da compra</h5>
+      <p class="card-text">Total {{valorTotal}}</p>
+      <div class="card-footer">
+        <a href="#" class="btn btn-primary btn-lg btn-block">Comprar</a>
+      </div>
+    </div>
+  </div>
+</div>
