--- a/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -3,7 +3,7 @@
 </h1>
 
 <div class="d-flex">
-  <table class="table table-bordered" style="margin:100px">
+  <table class="table table-bordered table-striped" style="margin:2rem">
       <thead>
         <tr>
           <th scope="col">Produto</th>
@@ -25,9 +25,15 @@
   <div class="card" style="width: 30rem;">
     <div class="card-body">
       <h5 class="card-header">Resumo da compra</h5>
-      <p class="card-text">Total {{valorTotal}}</p>
+      <div class="d-flex flex-row">
+          <div class="p-2">Total:</div>
+          <div class="ml-auto p-2">{{valorTotal}}</div>
+      </div>
+     
+      <p class="card-text">Parcela em até 10x sem juros</p>
       <div class="card-footer">
-        <a href="#" class="btn btn-primary btn-lg btn-block">Comprar</a>
+        <a href="#" class="btn btn-primary btn-lg btn-block">
+            <span class="fas fa-shopping-cart"></span>Comprar</a>
       </div>
     </div>
   </div>
