--- a/angular/trabalho-ecommerce/src/styles.css
+++ b/angular/trabalho-ecommerce/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 .wrapper {
-    padding: 15px;
+    padding: 15px 30px;
 }
