--- a/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -7,17 +7,37 @@
       <thead>
         <tr>
           <th scope="col">Produto</th>
-          <th scope="col">Quantidade</th>
+          <th scope="col" style="width:11rem">Quantidade</th>
           <th scope="col">Preço</th>
           <th scope="col">Total</th>
+          <th scope="col" style="width:2rem"></th>
         </tr>
       </thead>
-      <tbody >
+      <tbody>
           <tr *ngFor="let shopp of listShoppingCarts">
             <td>{{shopp.product.name}}</td>
-            <td>{{shopp.amount}}</td>
+            <td>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <button class="btn btn-outline-secondary" type="button" (click)="minAmount(shopp)">
+                      <span class="fas fa-minus"></span>
+                  </button>
+                </div>
+                <input type="text" value="{{shopp.amount}}" readonly=true style="width:4rem;text-align:center"/>
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" type="button" (click)="plusAmount(shopp)">
+                      <span class="fas fa-plus"></span>
+                  </button>
+                </div>
+              </div>
+            </td>
             <td>{{shopp.product.price}}</td>
             <td>{{(shopp.product.price*shopp.amount)}}</td>
+            <td>
+              <button type="button" class="btn btn-danger" (click)="removeListShopp(shopp)">
+                  <span class="fas fa-trash-alt"></span>
+              </button>
+            </td>
           </tr>
       </tbody>
   </table>
@@ -25,6 +45,10 @@
   <div class="card" style="width: 30rem;">
     <div class="card-body">
       <h5 class="card-header">Resumo da compra</h5>
+      <div class="d-flex flex-row">
+          <div class="p-2">Itens:</div>
+          <div class="ml-auto p-2">{{qtdeItens}}</div>
+      </div>
       <div class="d-flex flex-row">
           <div class="p-2">Total:</div>
           <div class="ml-auto p-2">{{valorTotal}}</div>
