--- a/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -19,7 +19,8 @@
             <td>
               <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                  <button class="btn btn-outline-secondary" type="button" (click)="minAmount(shopp)">
+                  <button class="btn btn-outline-secondary" type="button" (click)="minAmount(shopp)" 
+                    [disabled]="this.shopp.amount == 1">
                       <span class="fas fa-minus"></span>
                   </button>
                 </div>
