atualização da pagina da lista de produtos

--- a/angular/trabalho-ecommerce/src/app/pages/products/products.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/products/products.component.html
@@ -1,3 +1,27 @@
-<p>
-  products works!
-</p>
+<!-- INíCIO do CONTEÚDO -->
+<section class="content-header">
+  <h1>
+    Todos os Produtos
+  </h1>
+</section>
+
+
+<section class="content">
+
+  <div class="row">
+    <div class="col-sm-6 col-xs-12" *ngFor="let product of products">
+      <div class="card">
+        <img class="card-img-top" [src]="product.imageUrl" style="width: 200px; height: 200px ">
+        <div class="card-body">
+          <h5 class="card-title">{{product.name}}</h5>
+          <p class="card-text">{{product.description}}</p>
+          <p class="card-footer">{{ product.price | currency:'BRL': true }}</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<!-- FIM  do CONTEÚDO -->
