Criando o observable para a lista de produtos no carrinho.

--- a/angular/trabalho-ecommerce/src/app/components/product-grid-item/product-grid-item.component.css
+++ b/angular/trabalho-ecommerce/src/app/components/product-grid-item/product-grid-item.component.css
@@ -1,4 +1,10 @@
 .item-wrapper {
     display: inline-block;
     margin: 10px 30px;
+    width: 200px;
+    text-align: center;
+}
+
+i {
+    cursor: pointer;
 }
