--- a/angular/trabalho-ecommerce/src/app/components/product-grid-item/product-grid-item.component.html
+++ b/angular/trabalho-ecommerce/src/app/components/product-grid-item/product-grid-item.component.html
@@ -2,7 +2,8 @@
     <img src="https://via.placeholder.com/150" alt="img">
     <div>
         <span>
-          Teste
+          {{product.name}}
         </span>
     </div>
+    <i class="fas fa-cart-plus" (click)="addToCart()"></i>
 </div>
