--- a/angular/trabalho-ecommerce/src/app/components/topbar/topbar.component.css
+++ b/angular/trabalho-ecommerce/src/app/components/topbar/topbar.component.css
@@ -1,4 +1,26 @@
 i {
     font-size: 22px;
     margin: 0 15px;
+    position: relative;
+}
+
+.fixed-top {
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
+
+.badge {
+    border-radius: 50%;
+    height: 18px;
+    width: 18px;
+    color: white;
+    font-weight: bold;
+    padding: 0px;
+    text-align: center;
+    position: absolute;
+    top: -9px;
+    right: -8px;
+    font-size: 16px;
+    background-color: red;
 }
