--- a/angular/trabalho-ecommerce/src/app/components/topbar/topbar.component.html
+++ b/angular/trabalho-ecommerce/src/app/components/topbar/topbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <a class="navbar-brand" href="#">Sem Nome</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,9 @@
       </li>
     </ul>
     <div>
-      <i class="fas fa-shopping-cart" [routerLink]="['shopping-cart']"></i>
+      <i class="fas fa-shopping-cart" [routerLink]="['shopping-cart']">
+        <span class="badge">{{productsCount}}</span>
+      </i>
       <i class="fas fa-user"></i>
     </div>
   </div>
