--- a/angular/trabalho-ecommerce/src/app/pages/main-page/main-page.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/main-page/main-page.component.html
@@ -29,7 +29,7 @@
 			<h2>Mais vendidos</h2>
 		</div>
 		<div class="col-md-12">
-			<app-product-grid-item *ngFor="let product of products" [product]="product"></app-product-grid-item>
+			<app-product-grid-item *ngFor="let product of mostSoldProducts" [product]="product"></app-product-grid-item>
 		</div>
 	</div>
 </section>
