--- a/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -8,7 +8,7 @@
         <tr>
           <th scope="col">Produto</th>
           <th scope="col" style="width:11rem">Quantidade</th>
-          <th scope="col">Preço</th>
+          <th scope="col">Preço Un.</th>
           <th scope="col">Total</th>
           <th scope="col" style="width:2rem"></th>
         </tr>
@@ -18,7 +18,8 @@
             <td>
                 <div class="card flex-row flex-wrap" style="border:none">
                     <div class="card-header border-0" style="padding:0.5rem">
-                        <img src="//placehold.it/60" alt="">
+                        <img  alt=""
+                          [src]="imagePath+shopp.product.imageUrl" style="width: 70px; height: 70px ">
                     </div>
                     <div class="card-block px-2">
                         <h5 class="card-title">
@@ -47,8 +48,8 @@
                 </div>
               </div>
             </td>
-            <td>{{shopp.product.price}}</td>
-            <td>{{(shopp.product.price*shopp.amount)}}</td>
+            <td>{{shopp.product.price | currency:'BRL': true}}</td>
+            <td>{{(shopp.product.price*shopp.amount) | currency:'BRL': true}}</td>
             <td>
               <button type="button" class="btn btn-danger" (click)="removeListShopp(shopp)">
                   <span class="fas fa-trash-alt"></span>
@@ -67,7 +68,7 @@
       </div>
       <div class="d-flex flex-row">
           <div class="p-2">Total:</div>
-          <div class="ml-auto p-2">{{valorTotal}}</div>
+          <div class="ml-auto p-2">{{ valorTotal | currency:'BRL': true }}</div>
       </div>
      
       <p class="card-text">Parcela em até 10x sem juros</p>
