--- a/angular/trabalho-ecommerce/src/app/pages/product-details/product-details.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/product-details/product-details.component.html
@@ -1,39 +1,39 @@
-<section class="content-header" style="padding: 20px">
-</section>
-
-<section class="content">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="box box-solid">
-        <div class="box-header with-border">
-
-
-          <h3 class="box-title">{{product?.name}}</h3>
-          <span class="pull-right">
-            {{product?.description}}
-          </span>
-        </div>
-        <!-- /.box-header -->
-        <div class="box-body">
-          <div class="col-sm-3 col-xs-12" *ngIf="product">
-            <img class="box-img-detail" [src]="product?.imageUrl" />
-          </div>
-
-          <dl class="col-sm-9 col-xs-12">
-            <dt>Categoria</dt>
-            <dd>{{product?.category}}</dd>
-            <dt>Descrição</dt>
-            <dd>{{product?.description}}</dd>
-            <dt>Preço</dt>
-            <dd>{{ product.price | currency:'BRL': true }}</dd>
-          </dl>
-        </div>
-        <!-- /.box-body -->
-
-        <button class="btn btn-success" (click)="addToCart()">Adicionar ao Carrinho</button>
-
-
+<section class="wrapper">
+  <div class="row justify-content-md-center mb-5">
+    <div class="col-md-6 text-center">
+      <img class="img-fluid img-thumbnail product-img" src="{{'../../../assets/img/products/' + product?.imageUrl}}" alt="">
+    </div>
+    <div class="col-md-3">
+      <span class="gray-primary">{{product?.sales}} vendidos</span>
+      <div class="details">
+        <span class="name">{{product?.name}}</span>
+        <span class="price">{{product?.price | currency:'BRL':'symbol':'1.2-2'}}</span>
+        <span>à vista OU</span>
       </div>
+      <div class="payment">
+        <div class="form-group">
+            <span class="price-divided"><i class="fas fa-credit-card"></i> até 12x de{{(product?.price/12) | currency:'BRL':'symbol':'1.2-2'}}</span>
+            <span class="gray-primary">Frete grátis para todas as capitais.</span>
+        </div>
+        <div class="form-group">
+          <label for="">Frete para outras cidades</label>
+          <input type="number" class="form-control" placeholder="Digite o CEP">
+          <button type="button" class="btn btn-sm btn-secondary mt-1">Calcular</button>
+        </div>
+        <span></span>
+      </div>
+      <div class="buy">
+        <button type="button" class="btn btn-primary" (click)="goToCart()">Comprar</button>
+        <button type="button" class="btn btn-outline-secondary" (click)="addToCart()">Adicionar ao carrinho</button>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-md-center mb-5">
+    <div class="col-md-9">
+      <h3>Descrição</h3>
+    </div>
+    <div class="col-md-9">
+        <span>{{product?.description}}</span>
     </div>
   </div>
 </section>
