--- a/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="card-block px-2">
                         <h5 class="card-title">
-                            <a href="#">
+                            <a [routerLink]="['/products',shopp.product.id]">
                               {{shopp.product.name}}</a>
                         </h5>
                         <p class="card-text">{{shopp.product.description}}</p>
