--- a/angular/trabalho-ecommerce/src/app/pages/main-page/main-page.component.css
+++ b/angular/trabalho-ecommerce/src/app/pages/main-page/main-page.component.css
@@ -1,11 +1,62 @@
 .car-item {
-    height: 250px;
-    width: 500px;
-    background-color: blue;
+  height: 250px;
+  width: 500px;
+  background-color: blue;
 }
 
 .carousel-wrapper {
-    height: 500px;
-    width: 60%;
-    margin: auto;
+  height: 500px;
+  width: 60%;
+  margin: auto;
+}
+
+.carousel-inner {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 15px;
+}
+
+.carousel-item  img {
+  height: 400px;
+  margin: auto;
+}
+.carousel-item  span {
+  position: absolute;
+  bottom: 0;
+  right: 50%;
+  transform: translateX(50%);
+  font-weight: bold;
+  font-size: 20px;
+  background-color: rgba(169, 169, 169, 0.5);
+  padding: 5px;
+  border-radius: 6px;
+}
+
+.page-change {
+  z-index: 1;
+  position: absolute;
+  height: 100%;
+  width: 35px;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  text-decoration: none;
+  color: #3f3f3f;
+}
+
+.page-change.left {
+  left: 0;
+}
+
+.page-change.right {
+  right: 0;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
