--- a/angular/trabalho-ecommerce/src/app/pages/product-details/product-details.component.css
+++ b/angular/trabalho-ecommerce/src/app/pages/product-details/product-details.component.css
@@ -14,7 +14,7 @@
 .details > .price {
     font-size: 56px;
     font-weight: 600;
-    color: blue;
+    color: #2c81ca;
 }
 
 .payment, .details {
