--- a/angular/trabalho-ecommerce/src/app/components/product-grid-item/product-grid-item.component.html
+++ b/angular/trabalho-ecommerce/src/app/components/product-grid-item/product-grid-item.component.html
@@ -1,10 +1,10 @@
 <div class="item-wrapper">
-    <img class="img-thumbnail" src="{{'../../../assets/img/products/' + product.imageUrl}}" alt="img">
+    <img (click)="goToDetails()" class="img-thumbnail" src="{{'../../../assets/img/products/' + product.imageUrl}}" alt="img">
     <span class="text-truncate name">
           {{product.name}}
     </span>
-    <div>
-        <span>{{product.price | currency:'BRL':'symbol':'1.2-2'}}</span>
-        <i class="fas fa-cart-plus" (click)="addToCart()"></i>
+    <div class="buy">
+        <span class="price">{{product.price | currency:'BRL':'symbol':'1.2-2'}}</span>
+        <span class="cart" (click)="addToCart()"><i class="fas fa-cart-plus"></i> Comprar</span>
     </div>
 </div>
