--- a/angular/trabalho-ecommerce/src/app/pages/main-page/main-page.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/main-page/main-page.component.html
@@ -1,9 +1,16 @@
 <section class="wrapper">
 	<div class="row">
 		<div class="col-md-12">
-			<div class="carousel slide carousel-wrapper" data-ride="carousel">
+			<div id="carouselIndicators" class="carousel slide carousel-wrapper" data-ride="carousel">
 				<div class="carousel-inner">
-					<div class="carousel-item active">
+					<div *ngFor="let product of mostSoldProducts; let i = index" class="carousel-item"
+						[ngClass]="{'active': i === 1}">
+						<div>
+								<img class="d-block" (click)="goToDetails(product.id)" src="{{'../../../assets/img/products/' + product.imageUrl}}">
+								<span>{{product.name}}</span>
+						</div>
+					</div>
+					<!-- <div class="carousel-item active">
 						<img class="d-block w-100" src="//placehold.it/800x400/557573" alt="First slide">
 					</div>
 					<div class="carousel-item">
@@ -11,13 +18,13 @@
 					</div>
 					<div class="carousel-item">
 						<img class="d-block w-100" src="//placehold.it/800x400/557573" alt="Third slide">
-					</div>
+					</div> -->
 				</div>
-				<a class="carousel-control-prev" href="javascript:void(0)" (click)="previousItem()" role="button" data-slide="prev">
+				<a class="carousel-control-prev" href="#carouselIndicators"  role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="sr-only">Previous</span>
 				</a>
-				<a class="carousel-control-next" href="javascript:void(0)" (click)="nextItem()" role="button" data-slide="next">
+				<a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="sr-only">Next</span>
 				</a>
@@ -29,7 +36,13 @@
 			<h2>Mais vendidos</h2>
 		</div>
 		<div class="col-md-12">
-			<app-product-grid-item *ngFor="let product of mostSoldProducts" [product]="product"></app-product-grid-item>
+			<div class="row">
+				<a href="javascript:void(0)" class="page-change right" (click)="nextMostSoldItems()"><i class="fas fa-caret-right"></i></a>
+				<a href="javascript:void(0)" class="page-change left" (click)="previousMostSoldItems()"><i class="fas fa-caret-left"></i></a>
+				<div *ngFor="let product of mostSoldProductsAux" class="col-md-3 text-center">
+					<app-product-grid-item  [product]="product"></app-product-grid-item>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
