--- a/angular/trabalho-ecommerce/src/app/pages/products/products.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/products/products.component.html
@@ -24,20 +24,22 @@
 </section>
 
 -->
+<div class="wrapper">
+    <section class="content-header">
+        <h1>
+          Todos os produtos
+        </h1>
+      </section>
+    
+    
+      <section class="content">
+    
+        <div class="row">
+          <div class="col-sm-12 col-xs-12 col-md-3" *ngFor="let product of products" >
+            <app-product [product]="product"></app-product>
+          </div>
+        </div>
+    
+      </section>
+</div>
 
-<section class="content-header">
-    <h1>
-      Todos os produtos
-    </h1>
-  </section>
-
-
-  <section class="content">
-
-    <div class="row">
-      <div class="col-sm-12 col-xs-12" *ngFor="let product of products" >
-        <app-product [product]="product"></app-product>
-      </div>
-    </div>
-
-  </section>
