--- a/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/angular/trabalho-ecommerce/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,81 +1,83 @@
-<h1>
-  Meu Carrinho!
-</h1>
-
-<div class="d-flex">
-  <table class="table table-bordered" style="margin:2rem">
-      <thead>
-        <tr>
-          <th scope="col">Produto</th>
-          <th scope="col" style="width:11rem">Quantidade</th>
-          <th scope="col">Preço Un.</th>
-          <th scope="col">Total</th>
-          <th scope="col" style="width:2rem"></th>
-        </tr>
-      </thead>
-      <tbody>
-          <tr *ngFor="let shopp of listShoppingCarts">
-            <td>
-                <div class="card flex-row flex-wrap" style="border:none">
-                    <div class="card-header border-0" style="padding:0.5rem">
-                        <img  alt=""
-                          [src]="imagePath+shopp.product.imageUrl" style="width: 70px; height: 70px ">
+<div class="wrapper">
+    <h1>
+        Meu Carrinho!
+      </h1>
+      
+      <div class="d-flex">
+        <table class="table table-bordered" style="margin:2rem">
+            <thead>
+              <tr>
+                <th scope="col">Produto</th>
+                <th scope="col" style="width:11rem">Quantidade</th>
+                <th scope="col">Preço Un.</th>
+                <th scope="col">Total</th>
+                <th scope="col" style="width:2rem"></th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let shopp of listShoppingCarts">
+                  <td>
+                      <div class="card flex-row flex-wrap" style="border:none">
+                          <div class="card-header border-0" style="padding:0.5rem">
+                              <img  alt=""
+                                [src]="imagePath+shopp.product.imageUrl" style="width: 70px; height: 70px ">
+                          </div>
+                          <div class="card-block px-2">
+                              <h5 class="card-title">
+                                  <a [routerLink]="['/products',shopp.product.id]">
+                                    {{shopp.product.name}}</a>
+                              </h5>
+                              <p class="card-text">{{shopp.product.description}}</p>
+                          </div>
+                          <div class="w-100"></div>
+                      </div>
+      
+                  </td>
+                  <td>
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <button class="btn btn-outline-secondary" type="button" (click)="minAmount(shopp)" 
+                          [disabled]="this.shopp.amount == 1">
+                            <span class="fas fa-minus"></span>
+                        </button>
+                      </div>
+                      <input type="text" value="{{shopp.amount}}" readonly=true style="width:4rem;text-align:center"/>
+                      <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" (click)="plusAmount(shopp)">
+                            <span class="fas fa-plus"></span>
+                        </button>
+                      </div>
                     </div>
-                    <div class="card-block px-2">
-                        <h5 class="card-title">
-                            <a [routerLink]="['/products',shopp.product.id]">
-                              {{shopp.product.name}}</a>
-                        </h5>
-                        <p class="card-text">{{shopp.product.description}}</p>
-                    </div>
-                    <div class="w-100"></div>
-                </div>
-
-            </td>
-            <td>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <button class="btn btn-outline-secondary" type="button" (click)="minAmount(shopp)" 
-                    [disabled]="this.shopp.amount == 1">
-                      <span class="fas fa-minus"></span>
-                  </button>
-                </div>
-                <input type="text" value="{{shopp.amount}}" readonly=true style="width:4rem;text-align:center"/>
-                <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" type="button" (click)="plusAmount(shopp)">
-                      <span class="fas fa-plus"></span>
-                  </button>
-                </div>
-              </div>
-            </td>
-            <td>{{shopp.product.price | currency:'BRL': true}}</td>
-            <td>{{(shopp.product.price*shopp.amount) | currency:'BRL': true}}</td>
-            <td>
-              <button type="button" class="btn btn-danger" (click)="removeListShopp(shopp)">
-                  <span class="fas fa-trash-alt"></span>
-              </button>
-            </td>
-          </tr>
-      </tbody>
-  </table>
-
-  <div class="card" style="width: 30rem;">
-    <div class="card-body">
-      <h5 class="card-header">Resumo da compra</h5>
-      <div class="d-flex flex-row">
-          <div class="p-2">Itens:</div>
-          <div class="ml-auto p-2">{{qtdeItens}}</div>
+                  </td>
+                  <td>{{shopp.product.price | currency:'BRL': true}}</td>
+                  <td>{{(shopp.product.price*shopp.amount) | currency:'BRL': true}}</td>
+                  <td>
+                    <button type="button" class="btn btn-danger" (click)="removeListShopp(shopp)">
+                        <span class="fas fa-trash-alt"></span>
+                    </button>
+                  </td>
+                </tr>
+            </tbody>
+        </table>
+      
+        <div class="card" style="width: 30rem;">
+          <div class="card-body">
+            <h5 class="card-header">Resumo da compra</h5>
+            <div class="d-flex flex-row">
+                <div class="p-2">Itens:</div>
+                <div class="ml-auto p-2">{{qtdeItens}}</div>
+            </div>
+            <div class="d-flex flex-row">
+                <div class="p-2">Total:</div>
+                <div class="ml-auto p-2">{{ valorTotal | currency:'BRL': true }}</div>
+            </div>
+           
+            <p class="card-text">Parcela em até 10x sem juros</p>
+            <div class="card-footer">
+              <a href="#" class="btn btn-primary btn-lg btn-block">
+                  <span class="fas fa-shopping-cart"></span>Comprar</a>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="d-flex flex-row">
-          <div class="p-2">Total:</div>
-          <div class="ml-auto p-2">{{ valorTotal | currency:'BRL': true }}</div>
-      </div>
-     
-      <p class="card-text">Parcela em até 10x sem juros</p>
-      <div class="card-footer">
-        <a href="#" class="btn btn-primary btn-lg btn-block">
-            <span class="fas fa-shopping-cart"></span>Comprar</a>
-      </div>
-    </div>
-  </div>
 </div>
